--- a/learn_clinical_trials.org
+++ b/learn_clinical_trials.org
@@ -41,9 +41,11 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
   - Generally refers to a subset of data collected from a larger population.
   - In statistics, a sample is a set of obverservations or data points selected from a population of interest.
   - The selection methods might include random sampling, stratified sampling or other statistical techinques.
+
 - *Purpose:*
   - To make inferences or draw conclusions about the larger population from which it is drawn.
   - By analyzing sample data, researchers can estimate population parameters, test hypotheses, and make predictions.
+
 - *Charateristics:*
   - Can vary widely in nature depending on the field of study.
   - It represents a smaller, manageable portion of a larger group.
@@ -64,6 +66,7 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
    - vital signs (blood pressure, heart rate, temperature)
    - body measurements (height, weight, BMI)
    - specific disease-related measurements (e.g. tumor size in cancer trials)
+
 4. Genetic Information (if relevant)
    - genetic markers or mutations
    - family genetic history, when applicable
@@ -72,18 +75,22 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
    - blood tests (hematology, blood chemistry)
    - urine analysis
    - other biological samples (e.g. tissue biopsies)
+
 6. Disease-Specific Clnical Assessments:
    - disease severity scoring
    - staging of the disease (e.g. cancer staging)
    - specific clinical scales or questionnaries relevant to the disease
+
 7. Treatment Exposure Data:
    - dosage and reginmen of the investigational product
    - duration of treatment
    - concomitant medications
+
 8. Efficacy Data:
    - primary and secondary endpoints of the study
    - clinical outcomes (e.g. reduction in tumor size, blood sugar levels)
    - patient-reported outcomes (symptoms, quality of life measures)
+
 9. Safety Data:
    - adverse events (AEs) and serious adverse events (SAEs)
    - laboratory abnormalities as a result of treatment
@@ -100,9 +107,11 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 12. Compliance Data:
     - adherence to the treatment regimen
     - missed doses or deviations from the study protocol
+
 13. Follow-up Data:
     - long-term efficacy and safety data
     - post-study monitoring of outcomes
+
 14. Economic and Quality of Life Assessments:
     - health economics data (cost-effectiveness)
     - quality of life assessments, often using validated questionnaries
@@ -180,3 +189,166 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 
 * References
 (1) Hsiue EHC, Moore TJ, Alexander GC. Estimated costs of pivotal trials for U.S. Food and Drug Administration-approved cancer drugs, 2015-2017. Clin Trials 2020;17(2):119–125. Crossref, Medline, Google Scholar
+
+
+* Adhoc Questions
+** How to address intercurrent event using estimand strategies?
+Addressing intercurrent events using estimand strategies is a crucial aspect of clinical trial design and analysis, enhancing clarity and transparency in how we handle post-randomization events that could affect the interpretation of treatment effects. Estimands aim to precisely define the target of estimation to address the specific clinical question of interest, taking into account the complexities introduced by intercurrent events. Here are some steps and considerations for incorporating estimand strategies to deal with intercurrent events as a lead biostatistician:
+
+1. Define Your Estimand
+Start by clearly defining your estimand according to the ICH E9(R1) guideline, which should include a precise definition of the target population, endpoint(s), and the treatment effect(s) of interest in the presence of intercurrent events. This involves specifying the clinical question you aim to answer and the relevant population characteristics.
+
+2. Identify Intercurrent Events
+Intercurrent events are events that occur after treatment initiation and can affect either the interpretation or the existence of the measurements associated with the clinical question of interest. Common examples include use of rescue medication, discontinuation of treatment, and occurrence of a major health event. Identifying these events early in the trial design is crucial for proper estimand formulation.
+
+3. Choose an Appropriate Strategy
+The ICH E9(R1) guideline outlines several strategies for addressing intercurrent events within the framework of estimands. These include:
+
+Treatment Policy Strategy: Include all data, regardless of the occurrence of intercurrent events, to reflect the treatment effect under the treatment policy being studied.
+Composite Strategy: Combine the primary variable of interest with the intercurrent event into a composite endpoint.
+Hypothetical Strategy: Estimate what the outcomes would have been without the intercurrent events.
+Principal Stratification Strategy: Focus on a subgroup of participants who are not affected by the intercurrent events.
+While on Treatment Strategy: Analyze data only up to the occurrence of the intercurrent event.
+4. Implement Appropriate Statistical Methods
+Once you've chosen a strategy, select statistical methods that align with your estimand. This might involve methods for handling missing data, such as multiple imputation or inverse probability weighting, or more complex models like causal inference techniques, depending on the chosen strategy.
+
+5. Document and Justify Your Choices
+Document your estimand strategy and the rationale for your choice, including how you plan to handle each identified intercurrent event. This documentation should be part of your statistical analysis plan (SAP) and protocol, ensuring transparency and regulatory compliance.
+
+6. Sensitivity Analyses
+Conduct sensitivity analyses to assess the robustness of your findings to different assumptions about the handling of intercurrent events. This can provide insights into the impact of these events on the treatment effect estimate.
+
+7. Communicate with Stakeholders
+Engage with clinical and regulatory stakeholders early and throughout the trial process to ensure alignment on the estimand strategy and its implications for clinical decision-making.
+
+** What are intercurrent events, give me some examples
+Intercurrent events are occurrences after the initiation of treatment in a clinical trial that can affect the interpretation of the primary outcome, either by changing the course of the disease under study or by influencing the measurement of the primary outcome. These events pose challenges in assessing the true effect of the treatment being studied. The concept of intercurrent events is central to the framework of estimands, as defined in the ICH E9(R1) Addendum on Estimands and Sensitivity Analysis in Clinical Trials. Here are some common examples of intercurrent events:
+
+1. Use of Rescue Medication
+Participants may receive additional treatments or interventions not specified in the study protocol to manage symptoms or adverse reactions, which can confound the effects of the study treatment.
+
+2. Treatment Discontinuation
+Participants may stop the study treatment prematurely for various reasons, such as experiencing side effects, perceiving lack of efficacy, or personal choice. This can complicate the assessment of long-term treatment effects.
+
+3. Switching Treatments
+In some cases, participants might switch to an alternative treatment during the study. This switch could affect the disease progression independently of the study treatment.
+
+4. Missing Data
+Missing data, resulting from participants dropping out of the study or missing scheduled assessments, can introduce bias if the reasons for missing data are related to the treatment or outcome.
+
+5. Death
+Death is a critical intercurrent event, especially in studies where survival or life-extension is the primary endpoint. It requires careful consideration in the analysis to accurately reflect the treatment's impact on survival.
+
+6. Major Health Events
+Events such as hospitalization, surgery, or the occurrence of a new illness can impact the outcome of interest or the ability to measure it accurately.
+
+7. Protocol Deviations
+Violations of the study protocol, whether intentional or accidental, by participants or investigators, can affect the treatment's perceived efficacy and safety.
+
+Handling these intercurrent events appropriately in the analysis is crucial for drawing valid and reliable conclusions about the treatment's effects. The choice of strategy to address these events should be guided by the clinical question of interest and the context of the disease and treatment under investigation.
+
+** How to handle biomarker endpoint (exploratory) with primary and secondary endpoints
+When a lead biostatistician in a Contract Research Organization (CRO) is involved in exploring biomarker endpoints, especially in the exploratory phase of a clinical trial, there are several important considerations regarding sample size calculation. Whether there is a need to redo sample size calculation specifically for the biomarker endpoint depends on various factors, including the objectives of the biomarker analysis, the relationship between the biomarker and primary/secondary endpoints, and the statistical properties of the biomarker itself. Here are some key points to consider:
+
+Objectives of Biomarker Analysis
+- Exploratory vs. Confirmatory: If the biomarker analysis is purely exploratory, intended to generate hypotheses rather than confirm them, a formal sample size recalculation may not be strictly necessary. However, having a sufficient sample size to observe a meaningful signal is still important for the credibility of any findings.
+- Decision-making: If the biomarker is critical for future decision-making, such as selecting doses for later-phase trials or identifying responder subgroups, a more rigorous approach to sample size determination may be warranted to ensure the reliability of these decisions.
+
+Relationship to Primary/Secondary Endpoints
+- Correlation with Clinical Outcomes: If the biomarker is strongly correlated with the primary or secondary endpoints, the original sample size may already offer sufficient power to detect meaningful changes in the biomarker. However, this depends on the strength of the correlation and the variability of the biomarker.
+- Independent Analysis Goals: If the biomarker endpoint serves a distinct purpose or addresses a separate question from the primary/secondary endpoints, a separate sample size calculation based on the expected effect size, variability, and desired power for the biomarker analysis may be necessary.
+
+Statistical Properties of the Biomarker
+- Variability: Biomarkers often have different variability characteristics compared to clinical endpoints. High variability may necessitate a larger sample size to detect a given effect size.
+- Effect Size: The expected effect size for the biomarker may differ from that of the primary/secondary endpoints, potentially requiring adjustment to the sample size calculation.
+
+Practical Considerations
+- Resource Limitations: In the context of a CRO, resource constraints such as budget and time can also influence the feasibility of increasing sample size based on biomarker analyses.
+- Regulatory Guidance: Consideration of regulatory expectations for biomarker-based analyses, especially if the biomarker might later transition to a more pivotal role in the study or program.
+
+Steps to Take
+- Preliminary Analysis: Conduct a preliminary analysis to assess the variability and potential effect size associated with the biomarker.
+- Statistical Methods: Employ statistical methods tailored to biomarker analysis, which may include simulation studies to estimate the required sample size under different scenarios.
+- Consultation: Engage with clinical and scientific experts to understand the clinical relevance of changes in the biomarker and to align on the objectives of the biomarker analysis.
+
+In conclusion, while there may not always be a need to formally redo the sample size calculation for exploratory biomarker endpoints, considering the specific objectives and statistical properties of the biomarker analysis is crucial. A careful evaluation will help ensure that the study is appropriately powered to yield informative and credible results, supporting the overall goals of the clinical program.
+
+** What are common biomarker assays used in oncology and immuno-oncology trials?
+In oncology and immuno-oncology trials, biomarkers play a crucial role in understanding the mechanism of action of therapies, predicting responses, and monitoring disease progression. The landscape of biomarker assays is rapidly evolving, driven by advances in technology and a deeper understanding of cancer biology. Here are some popular biomarker assays currently used in these fields:
+
+1. Immunohistochemistry (IHC)
+IHC is widely used for the detection and localization of proteins within tissue sections. It is particularly useful for assessing the expression of tumor antigens, checkpoint proteins (e.g., PD-L1), and other markers that may predict response to immunotherapy.
+
+2. Polymerase Chain Reaction (PCR)
+PCR, including quantitative PCR (qPCR) and reverse transcription PCR (RT-PCR), is a sensitive method for detecting gene mutations, amplifications, or expression levels of mRNA. It's commonly used for identifying specific oncogenic mutations or viral DNA associated with certain cancers.
+
+3. Next-Generation Sequencing (NGS)
+NGS allows for the comprehensive analysis of genetic mutations, gene expression profiles, and other genomic alterations. Its applications in oncology include whole-genome sequencing, targeted gene panel sequencing, and transcriptome sequencing (RNA-Seq). NGS is instrumental in identifying actionable mutations and predicting responses to targeted therapies.
+
+4. Circulating Tumor DNA (ctDNA) Analysis
+ctDNA assays detect and quantify tumor-derived DNA fragments in the blood, offering a non-invasive approach to cancer diagnosis, prognosis, and monitoring of treatment response. This "liquid biopsy" technique is gaining traction for its ability to detect minimal residual disease and emerging resistance mutations.
+
+5. Flow Cytometry
+Flow cytometry is used to analyze the physical and chemical characteristics of cells or particles in a fluid as it passes through at least one laser. It's particularly useful for characterizing immune cell populations, assessing leukocyte differentiation status, and quantifying markers of activation or inhibition in the context of immuno-oncology.
+
+6. Multiplex Immunoassays
+Multiplex immunoassays, such as Luminex or cytometric bead array, allow for the simultaneous measurement of multiple cytokines, growth factors, and other soluble proteins in a single sample. This capability is valuable for profiling the immune response and understanding the cytokine milieu within the tumor microenvironment.
+
+7. Tumor Mutation Burden (TMB)
+TMB is assessed through comprehensive genomic profiling and quantifies the number of mutations within a tumor genome. A higher TMB may predict a better response to immune checkpoint inhibitors, making it a valuable biomarker in immuno-oncology.
+
+8. Microsatellite Instability (MSI) and Mismatch Repair (MMR) Deficiency Testing
+MSI and MMR deficiency are biomarkers for certain types of cancer, indicating a predisposition to accumulate genetic mutations. These markers are particularly relevant in colorectal cancer and have implications for responsiveness to immunotherapy.
+
+9. T-cell Receptor (TCR) Sequencing
+TCR sequencing analyzes the diversity and clonality of the T-cell repertoire within a tumor or peripheral blood, providing insights into the immune response to cancer and the potential efficacy of immunotherapies.
+
+These assays are critical tools in the design and execution of oncology and immuno-oncology trials, enabling personalized medicine approaches that match patients with the most appropriate therapies based on their biomarker profiles. As research progresses, the use of these and emerging assays will continue to refine our understanding of cancer biology and enhance the effectiveness of cancer treatments.
+
+** What are well-accepted targets at genomic, proteomic and cellular level for oncology and immuno-oncology trials
+In oncology and immuno-oncology trials, the identification of specific targets at the genomic, proteomic, and cellular levels is crucial for the development of effective therapies. These targets provide the basis for understanding cancer's molecular mechanisms and for designing drugs that can selectively interfere with the growth and spread of cancer cells while sparing normal cells. Here are some well-accepted targets in each category:
+
+Genomic Targets
+- KRAS: Mutations in the KRAS gene are common in various cancers, including lung, colorectal, and pancreatic cancers. KRAS inhibitors are being actively explored in clinical trials.
+- EGFR (Epidermal Growth Factor Receptor): EGFR mutations are prevalent in non-small cell lung cancer (NSCLC) and are targets for EGFR inhibitors.
+- BRAF: BRAF mutations, notably V600E in melanoma, are targets for BRAF inhibitors, often used in combination with MEK inhibitors.
+- HER2 (Human Epidermal Growth Factor Receptor 2): HER2 is overexpressed in breast cancer and gastric cancer, targeted by monoclonal antibodies and antibody-drug conjugates.
+- BRCA1/2: Mutations in these genes are linked to increased risk of breast and ovarian cancers, with PARP inhibitors being effective in targeting BRCA-mutated cancers.
+
+Proteomic Targets
+- PD-1/PD-L1 (Programmed Death-1/Ligand-1): These proteins are key immune checkpoint molecules. Inhibitors of PD-1/PD-L1, such as pembrolizumab and nivolumab, have revolutionized the treatment of various cancers by enhancing anti-tumor immunity.
+- CTLA-4 (Cytotoxic T-Lymphocyte-Associated Protein 4): Another immune checkpoint inhibitor target, CTLA-4 blockade (e.g., ipilimumab) can promote anti-tumor immune responses, especially in melanoma.
+- ALK (Anaplastic Lymphoma Kinase): ALK rearrangements in NSCLC are targeted by ALK inhibitors.
+- VEGF (Vascular Endothelial Growth Factor): VEGF and its receptors are targets for anti-angiogenic therapies, which inhibit tumor blood vessel formation.
+
+Cellular Targets
+- T cells: Enhancing the activity of T cells against cancer cells is a primary focus of immuno-oncology. CAR-T cell therapies, where T cells are engineered to express chimeric antigen receptors targeting cancer cells, have been successful in treating certain hematological malignancies.
+- NK (Natural Killer) cells: Therapies that activate or enhance NK cell responses against tumor cells are under investigation.
+- Myeloid-derived suppressor cells (MDSCs) and Tumor-associated macrophages (TAMs): These cells can suppress anti-tumor immunity and are targets for therapies aiming to reprogram the tumor microenvironment to support an immune response against the tumor.
+- Cancer stem cells: Targeting cancer stem cells, which may be responsible for resistance to conventional therapies and cancer recurrence, is an ongoing area of research.
+
+These targets represent only a fraction of the vast landscape of potential molecular and cellular targets in oncology and immuno-oncology. The field is rapidly evolving, with new targets being identified as our understanding of cancer biology deepens. The success of therapies targeting these molecules highlights the importance of precision medicine in cancer treatment, where therapies are tailored to the specific genetic and molecular profile of the tumor.
+
+** Can the measurements of these targets be included as exploratory or third endpoints in oncology or immuno-oncology trials?
+Yes, measurements of these targets can indeed be included as exploratory or third endpoints in oncology and immuno-oncology trials. Incorporating these measurements as exploratory endpoints serves several important purposes:
+
+1. Biomarker Validation
+Including measurements of genomic, proteomic, and cellular targets as exploratory endpoints allows for the validation of these biomarkers in the context of the clinical trial. This validation process is crucial for understanding the biomarker's role in the disease process and its potential utility in predicting response to therapy or in patient stratification.
+
+2. Mechanism of Action (MoA) Elucidation
+Exploratory endpoints can help elucidate the mechanism of action of the investigational therapeutic. By measuring changes in specific targets, researchers can gain insights into how the therapy interacts with its target and the downstream effects on signaling pathways, potentially identifying mechanisms of resistance or synergies with other therapies.
+
+3. Identification of Predictive Biomarkers
+The analysis of these targets may help identify predictive biomarkers that could foresee which patients are likely to benefit from the therapy. This is particularly relevant in immuno-oncology, where responses to treatments such as checkpoint inhibitors can vary widely among patients. Predictive biomarkers can improve patient selection for specific therapies, enhancing clinical trial efficiency and facilitating personalized medicine approaches.
+
+4. Safety and Toxicity Monitoring
+Measurements of certain targets can also be used to monitor for potential adverse effects related to the therapy. For example, changes in immune cell populations or cytokine levels could indicate immune-related adverse events (irAEs) in trials involving immunotherapies.
+
+5. Secondary Pharmacodynamic (PD) Endpoints
+These measurements can serve as secondary PD endpoints, providing evidence of drug activity at the intended target site or within a specific biological pathway. PD endpoints are invaluable for dose-ranging studies and for establishing the relationship between drug exposure and biological effect.
+
+Practical Considerations
+Feasibility and Relevance: The feasibility of measuring these exploratory endpoints and their relevance to the therapeutic area and study goals must be considered. This includes the availability of validated assays and the biological rationale linking the target to the disease.
+Statistical Analysis Plan (SAP): The SAP should clearly outline the methods for analyzing exploratory endpoints, including statistical techniques and handling of multiplicity issues. While exploratory analyses may not be subject to the same statistical rigor as primary or secondary endpoints, clear planning is essential for generating meaningful insights.
+Regulatory and Ethical Considerations: Any additional measurements, especially those requiring extra patient samples or procedures, should be justified in terms of scientific value and patient burden. Ethical and regulatory considerations must be addressed, ensuring that the collection of data aligns with study objectives and patient welfare.
+Incorporating these measurements as exploratory endpoints in clinical trials offers a valuable opportunity to enhance our understanding of disease mechanisms, therapeutic effects, and patient responses, ultimately contributing to the development of more effective and personalized cancer treatments.
